# Core_war

./: CMakeLists.txt  Hello_everyone  Makefile  author  corewar
Champion/: kok.s
Corewar_asm/: Makefile  README.md
Corewar_asm/ft_printf/: Makefile  author
Corewar_asm/ft_printf/includes/: ft_printf 2.h
Corewar_asm/ft_printf/srcs/: ft_parse.c  ft_print_float.c  ft_print_int 2.c  ft_print_unsig_int 2.c  ft_printf.c  ft_round_a_num.c  ft_skip.c  help_func_for_parse.c  long_arithmetic.c  parse_bonus_part.c  print_float_arrays.c  print_format.c  print_function.c  work_with_the_type_struct.c
Corewar_asm/includes/: op.h
Corewar_asm/libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_base_intlen.c  ft_bzero.c  ft_del_two_dim_array.c  ft_free_delim.c  ft_int_len.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_unsig_base.c  ft_len_two_dim_array.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_power.c  ft_put_n_line_char.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  (+34 more)
Corewar_asm/src_asm/: count_bytes_for_command.c  count_bytes_for_command2.c  ft_find_command.c  ft_parse.c  ft_print_command.c  ft_read.c  ft_second_read.c  utilits.c
branch_champ_validation/libft/collections/includes/: collections.h  ft_hash.h  iterator.h  list.h
branch_champ_validation/libft/collections/src/: iterator.c  list_conv.c  queue_peek.c
branch_champ_validation/libft/core/src/: ft_bzero.c  ft_free.c  ft_isdigit.c  ft_isprint.c  ft_isseparator.c  ft_isupper.c  ft_itoa_static.c  ft_lstnew.c  ft_max.c  ft_memccpy.c  ft_node_prepend.c  ft_putnbr.c  ft_putnbr_fd.c  ft_sitoa_base.c  ft_sitoa_base_static.c  ft_strcmp.c  ft_striter.c  ft_strnew2d.c  ft_strsplit.c  ft_tolower.c  ft_uilen.c
branch_champ_validation/libft/printf/src/specs/: apply_specs.c  wildcard.c
branch_champ_validation/libft/printf/src/types/: type_d.c  type_f.c  type_u.c
branch_champ_validation/sources/: champ_validation.c  crw_args_handler.c  crw_dying_process.c  crw_execute.c  cursor.c  cursor_utils.c
branch_champ_validation/sources/op/: op_fork.c  op_lfork.c  op_live.c  op_sti.c  op_sub.c  op_xor.c  utils.c
branch_first_draw/: CMakeLists.txt
branch_first_draw/includes/: corewar.h
branch_first_draw/libft/collections/includes/: iterator.h  queue.h
branch_first_draw/libft/collections/src/: ft_hash.c  iterator.c  list_conv.c  queue_peek.c  queue_push_pop.c
branch_first_draw/libft/core/includes/: coreft.h
branch_first_draw/libft/core/src/: ft_cntwords.c  ft_error.c  ft_isalnum.c  ft_isalpha.c  ft_litoa_static.c  ft_lstdel.c  ft_lstfree.c  ft_node_append.c  ft_node_del.c  ft_node_prepend.c  ft_strcpy.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strnequ.c
branch_first_draw/libft/includes/: libft.h
branch_first_draw/libft/printf/src/specs/: set_specs.c
branch_first_draw/libft/printf/src/tools/: buffer.c
branch_first_draw/libft/printf/src/types/: type_s.c  unknown.c
branch_first_draw/sources/: crw_dying_process.c  crw_execute.c  main.c  op_args_validation.c
branch_first_draw/sources/op/: op_and.c  op_lld.c  op_st.c  op_zjmp.c
includes/: asm.h  corewar.h  op.h
libft/: Makefile
libft/collections/includes/: hash_map.h  iterator.h  list.h  queue.h
libft/collections/src/: hash_map.c  hm_init_free_clear.c  hm_lookup_remove_insert.c  iterator.c  itr_foreach.c  list.c  list_get.c  list_insert.c  list_remove.c  list_sort.c  queue.c  queue_peek.c  queue_push_pop.c
libft/core/includes/: coreft.h
libft/core/src/: ft_abs.c  ft_any.c  ft_atoi.c  ft_atoi_check.c  ft_clear.c  ft_count_if.c  ft_del_two_dim_array.c  ft_freematr.c  ft_ftoa_static.c  ft_gnl.c  ft_intlen.c  ft_is_number.c  ft_isascii.c  ft_islower.c  ft_isspace.c  ft_iswhite.c  ft_itoa.c  ft_len_two_dim_array.c  ft_litoa.c  ft_lstadd.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_nblen.c  ft_node_append.c  ft_node_prepend.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c  (+34 more)
libft/getopt/includes/: ft_getopt.h
libft/getopt/src/: ft_getopt.c  ft_getopt_long.c  ft_strcspn.c
libft/includes/: libft.h
libft/printf/includes/: ft_printf.h
libft/printf/src/: ft_printf.c  ft_printf_extend.c  parsing.c
libft/printf/src/specs/: set_flags.c  set_length.c
libft/printf/src/tools/: get_f.c  get_si.c  get_ui.c  initialization.c
libft/printf/src/types/: percent.c  type_b.c  type_c.c  type_o.c  type_p.c  type_x.c
libft/string/includes/: ft_strings.h  string_builder.h
libft/string/src/: string_builder.c  string_builder_operats.c
sources/: champ_validation.c  collect_flags.c  crw_args_handler.c  crw_dying_process.c  crw_execute.c  crw_init_game.c  crw_utils.c  cursor.c  cursor_utils.c  main.c  op_add.c  op_aff.c  op_and.c  op_arg_handlers.c  op_args_validation.c  op_fork.c  op_ld.c  op_live.c  op_or.c  player.c  print.c  utils.c
sources/asm/: count_bytes_for_command.c  count_bytes_for_command2.c  ft_find_command.c  ft_init_label.c  ft_parse.c  ft_print_command.c  ft_read.c  ft_second_read.c  main.c  utilits.c
sources/op/: op_add.c  op_aff.c  op_and.c  op_arg_handlers.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  utils.c
sources/vm/: champ_validation.c  collect_flags.c  crw_dying_process.c  crw_execute.c  crw_init_game.c  crw_utils.c  cursor.c  cursor_utils.c  main.c  op_args_validation.c  parse_args.c  player.c  print.c
src/: main.c
