cmake_minimum_required(VERSION 3.10)
project(Corewar C)

set(CMAKE_C_STANDARD 99)


include_directories(includes)
include_directories(libft/includes)
include_directories(libft/collections/includes)
include_directories(libft/core/includes)
include_directories(libft/getopt/includes)
include_directories(libft/printf/includes)
include_directories(libft/string/includes)


add_executable(asm
        sources/asm/count_bytes_for_command.c
        sources/asm/count_bytes_for_command2.c
        sources/asm/ft_find_command.c
        sources/asm/ft_init_label.c
        sources/asm/ft_parse.c
        sources/asm/ft_print_command.c
        sources/asm/ft_read.c
        sources/asm/ft_second_read.c
        sources/asm/main.c
        sources/asm/utilits.c
		libft/collections/includes/collections.h
		libft/collections/includes/ft_hash.h
		libft/collections/includes/hash_map.h
		libft/collections/includes/iterator.h
		libft/collections/includes/list.h
		libft/collections/includes/queue.h
		libft/collections/src/ft_hash.c
		libft/collections/src/hash_map.c
		libft/collections/src/hm_init_free_clear.c
		libft/collections/src/hm_lookup_remove_insert.c
		libft/collections/src/iterator.c
		libft/collections/src/itr_foreach.c
		libft/collections/src/list.c
		libft/collections/src/list_conv.c
		libft/collections/src/list_get.c
		libft/collections/src/list_insert.c
		libft/collections/src/list_remove.c
		libft/collections/src/list_sort.c
		libft/collections/src/queue.c
		libft/collections/src/queue_peek.c
		libft/collections/src/queue_push_pop.c
		libft/core/includes/coreft.h
		libft/core/src/ft_is_number.c
		libft/core/src/ft_abs.c
		libft/core/src/ft_any.c
		libft/core/src/ft_atoi.c
		libft/core/src/ft_atoi_check.c
		libft/core/src/ft_bzero.c
		libft/core/src/ft_clear.c
		libft/core/src/ft_cntwords.c
		libft/core/src/ft_count_if.c
		libft/core/src/ft_error.c
		libft/core/src/ft_free.c
		libft/core/src/ft_freematr.c
		libft/core/src/ft_ftoa_static.c
		libft/core/src/ft_gnl.c
		libft/core/src/ft_intlen.c
		libft/core/src/ft_isalnum.c
		libft/core/src/ft_isalpha.c
		libft/core/src/ft_isascii.c
		libft/core/src/ft_isdigit.c
		libft/core/src/ft_islower.c
		libft/core/src/ft_isprint.c
		libft/core/src/ft_isseparator.c
		libft/core/src/ft_isspace.c
		libft/core/src/ft_isupper.c
		libft/core/src/ft_iswhite.c
		libft/core/src/ft_itoa.c
		libft/core/src/ft_itoa_static.c
		libft/core/src/ft_litoa.c
		libft/core/src/ft_litoa_static.c
		libft/core/src/ft_lstadd.c
		libft/core/src/ft_lstdel.c
		libft/core/src/ft_lstdelone.c
		libft/core/src/ft_lstfree.c
		libft/core/src/ft_lstiter.c
		libft/core/src/ft_lstmap.c
		libft/core/src/ft_lstnew.c
		libft/core/src/ft_max.c
		libft/core/src/ft_memalloc.c
		libft/core/src/ft_memccpy.c
		libft/core/src/ft_memchr.c
		libft/core/src/ft_memcmp.c
		libft/core/src/ft_memcpy.c
		libft/core/src/ft_memdel.c
		libft/core/src/ft_memmove.c
		libft/core/src/ft_memset.c
		libft/core/src/ft_min.c
		libft/core/src/ft_nblen.c
		libft/core/src/ft_node_append.c
		libft/core/src/ft_node_del.c
		libft/core/src/ft_node_prepend.c
		libft/core/src/ft_putchar.c
		libft/core/src/ft_putchar_fd.c
		libft/core/src/ft_putendl.c
		libft/core/src/ft_putendl_fd.c
		libft/core/src/ft_putnbr.c
		libft/core/src/ft_putnbr_fd.c
		libft/core/src/ft_putstr.c
		libft/core/src/ft_putstr_fd.c
		libft/core/src/ft_putstrs.c
		libft/core/src/ft_putstrss.c
		libft/core/src/ft_silen.c
		libft/core/src/ft_sitoa_base.c
		libft/core/src/ft_sitoa_base_static.c
		libft/core/src/ft_sizemin.c
		libft/core/src/ft_strcat.c
		libft/core/src/ft_strchr.c
		libft/core/src/ft_strclr.c
		libft/core/src/ft_strcmp.c
		libft/core/src/ft_strcpy.c
		libft/core/src/ft_strcspn.c
		libft/core/src/ft_strdel.c
		libft/core/src/ft_strdup.c
		libft/core/src/ft_strequ.c
		libft/core/src/ft_strfrjoin.c
		libft/core/src/ft_strindexof.c
		libft/core/src/ft_striter.c
		libft/core/src/ft_striteri.c
		libft/core/src/ft_strjoin.c
		libft/core/src/ft_strlcat.c
		libft/core/src/ft_strlen.c
		libft/core/src/ft_strmap.c
		libft/core/src/ft_strmapi.c
		libft/core/src/ft_strncat.c
		libft/core/src/ft_strncmp.c
		libft/core/src/ft_strncpy.c
		libft/core/src/ft_strnequ.c
		libft/core/src/ft_strnew.c
		libft/core/src/ft_strnew2d.c
		libft/core/src/ft_strnstr.c
		libft/core/src/ft_strrchr.c
		libft/core/src/ft_strsplit.c
		libft/core/src/ft_strstartwith.c
		libft/core/src/ft_strendwith.c
		libft/core/src/ft_strstr.c
		libft/core/src/ft_strsub.c
		libft/core/src/ft_strtrim.c
		libft/core/src/ft_swap.c
		libft/core/src/ft_tolower.c
		libft/core/src/ft_toupper.c
		libft/core/src/ft_uilen.c
		libft/core/src/ft_uitoa_base.c
		libft/core/src/ft_uitoa_base_static.c
		libft/core/src/ft_del_two_dim_array.c
		libft/core/src/ft_len_two_dim_array.c
		libft/core/src/ft_strjoin_free.c
		libft/core/src/ft_strjoin_free_all.c
		libft/getopt/includes/ft_getopt.h
		libft/getopt/src/ft_getopt.c
		libft/getopt/src/ft_getopt_long.c
		libft/includes/libft.h
		libft/printf/includes/ft_printf.h
		libft/printf/src/specs/apply_specs.c
		libft/printf/src/specs/set_flags.c
		libft/printf/src/specs/set_length.c
		libft/printf/src/specs/set_specs.c
		libft/printf/src/specs/wildcard.c
		libft/printf/src/tools/buffer.c
		libft/printf/src/tools/get_f.c
		libft/printf/src/tools/get_si.c
		libft/printf/src/tools/get_ui.c
		libft/printf/src/tools/initialization.c
		libft/printf/src/types/percent.c
		libft/printf/src/types/type_b.c
		libft/printf/src/types/type_c.c
		libft/printf/src/types/type_d.c
		libft/printf/src/types/type_f.c
		libft/printf/src/types/type_o.c
		libft/printf/src/types/type_p.c
		libft/printf/src/types/type_s.c
		libft/printf/src/types/type_u.c
		libft/printf/src/types/type_x.c
		libft/printf/src/types/unknown.c
		libft/printf/src/ft_printf.c
		libft/printf/src/ft_printf_extend.c
		libft/printf/src/parsing.c
		libft/string/includes/ft_strings.h
		libft/string/includes/string_builder.h
		libft/string/src/string_builder.c
		libft/string/src/string_builder_operats.c)

add_executable(Corewar
		sources/vm/champ_validation.c
		sources/vm/crw_dying_process.c
		sources/vm/crw_execute.c
		sources/vm/crw_init_game.c
		sources/vm/cursor.c
		sources/vm/cursor_utils.c
		sources/vm/main.c
		sources/vm/op_args_validation.c
		sources/vm/player.c
		sources/op/op_add.c
		sources/op/op_aff.c
		sources/op/op_and.c
		sources/op/op_fork.c
		sources/op/op_ld.c
		sources/op/op_ldi.c
		sources/op/op_lfork.c
		sources/op/op_live.c
		sources/op/op_lld.c
		sources/op/op_lldi.c
		sources/op/op_or.c
		sources/op/op_st.c
		sources/op/op_sti.c
		sources/op/op_sub.c
		sources/op/op_xor.c
		sources/op/op_zjmp.c
		sources/op/utils.c
		includes/corewar.h
		includes/op.h
		libft/collections/includes/collections.h
		libft/collections/includes/ft_hash.h
		libft/collections/includes/hash_map.h
		libft/collections/includes/iterator.h
		libft/collections/includes/list.h
		libft/collections/includes/queue.h
		libft/collections/src/ft_hash.c
		libft/collections/src/hash_map.c
		libft/collections/src/hm_init_free_clear.c
		libft/collections/src/hm_lookup_remove_insert.c
		libft/collections/src/iterator.c
		libft/collections/src/itr_foreach.c
		libft/collections/src/list.c
		libft/collections/src/list_conv.c
		libft/collections/src/list_get.c
		libft/collections/src/list_insert.c
		libft/collections/src/list_remove.c
		libft/collections/src/list_sort.c
		libft/collections/src/queue.c
		libft/collections/src/queue_peek.c
		libft/collections/src/queue_push_pop.c
		libft/core/includes/coreft.h
		libft/core/src/ft_is_number.c
		libft/core/src/ft_abs.c
		libft/core/src/ft_any.c
		libft/core/src/ft_atoi.c
		libft/core/src/ft_atoi_check.c
		libft/core/src/ft_bzero.c
		libft/core/src/ft_clear.c
		libft/core/src/ft_cntwords.c
		libft/core/src/ft_count_if.c
		libft/core/src/ft_error.c
		libft/core/src/ft_free.c
		libft/core/src/ft_freematr.c
		libft/core/src/ft_ftoa_static.c
		libft/core/src/ft_gnl.c
		libft/core/src/ft_intlen.c
		libft/core/src/ft_isalnum.c
		libft/core/src/ft_isalpha.c
		libft/core/src/ft_isascii.c
		libft/core/src/ft_isdigit.c
		libft/core/src/ft_islower.c
		libft/core/src/ft_isprint.c
		libft/core/src/ft_isseparator.c
		libft/core/src/ft_isspace.c
		libft/core/src/ft_isupper.c
		libft/core/src/ft_iswhite.c
		libft/core/src/ft_itoa.c
		libft/core/src/ft_itoa_static.c
		libft/core/src/ft_litoa.c
		libft/core/src/ft_litoa_static.c
		libft/core/src/ft_lstadd.c
		libft/core/src/ft_lstdel.c
		libft/core/src/ft_lstdelone.c
		libft/core/src/ft_lstfree.c
		libft/core/src/ft_lstiter.c
		libft/core/src/ft_lstmap.c
		libft/core/src/ft_lstnew.c
		libft/core/src/ft_max.c
		libft/core/src/ft_memalloc.c
		libft/core/src/ft_memccpy.c
		libft/core/src/ft_memchr.c
		libft/core/src/ft_memcmp.c
		libft/core/src/ft_memcpy.c
		libft/core/src/ft_memdel.c
		libft/core/src/ft_memmove.c
		libft/core/src/ft_memset.c
		libft/core/src/ft_min.c
		libft/core/src/ft_nblen.c
		libft/core/src/ft_node_append.c
		libft/core/src/ft_node_del.c
		libft/core/src/ft_node_prepend.c
		libft/core/src/ft_putchar.c
		libft/core/src/ft_putchar_fd.c
		libft/core/src/ft_putendl.c
		libft/core/src/ft_putendl_fd.c
		libft/core/src/ft_putnbr.c
		libft/core/src/ft_putnbr_fd.c
		libft/core/src/ft_putstr.c
		libft/core/src/ft_putstr_fd.c
		libft/core/src/ft_putstrs.c
		libft/core/src/ft_putstrss.c
		libft/core/src/ft_silen.c
		libft/core/src/ft_sitoa_base.c
		libft/core/src/ft_sitoa_base_static.c
		libft/core/src/ft_sizemin.c
		libft/core/src/ft_strcat.c
		libft/core/src/ft_strchr.c
		libft/core/src/ft_strclr.c
		libft/core/src/ft_strcmp.c
		libft/core/src/ft_strcpy.c
		libft/core/src/ft_strcspn.c
		libft/core/src/ft_strdel.c
		libft/core/src/ft_strdup.c
		libft/core/src/ft_strequ.c
		libft/core/src/ft_strfrjoin.c
		libft/core/src/ft_strindexof.c
		libft/core/src/ft_striter.c
		libft/core/src/ft_striteri.c
		libft/core/src/ft_strjoin.c
		libft/core/src/ft_strlcat.c
		libft/core/src/ft_strlen.c
		libft/core/src/ft_strmap.c
		libft/core/src/ft_strmapi.c
		libft/core/src/ft_strncat.c
		libft/core/src/ft_strncmp.c
		libft/core/src/ft_strncpy.c
		libft/core/src/ft_strnequ.c
		libft/core/src/ft_strnew.c
		libft/core/src/ft_strnew2d.c
		libft/core/src/ft_strnstr.c
		libft/core/src/ft_strrchr.c
		libft/core/src/ft_strsplit.c
		libft/core/src/ft_strstartwith.c
		libft/core/src/ft_strendwith.c
		libft/core/src/ft_strstr.c
		libft/core/src/ft_strsub.c
		libft/core/src/ft_strtrim.c
		libft/core/src/ft_swap.c
		libft/core/src/ft_tolower.c
		libft/core/src/ft_toupper.c
		libft/core/src/ft_uilen.c
		libft/core/src/ft_uitoa_base.c
		libft/core/src/ft_uitoa_base_static.c
		libft/getopt/includes/ft_getopt.h
		sources/vm/parse_args.c
		libft/getopt/src/ft_getopt.c
		libft/getopt/src/ft_getopt_long.c
		libft/includes/libft.h
		libft/printf/includes/ft_printf.h
		libft/printf/src/specs/apply_specs.c
		libft/printf/src/specs/set_flags.c
		libft/printf/src/specs/set_length.c
		libft/printf/src/specs/set_specs.c
		libft/printf/src/specs/wildcard.c
		libft/printf/src/tools/buffer.c
		libft/printf/src/tools/get_f.c
		libft/printf/src/tools/get_si.c
		libft/printf/src/tools/get_ui.c
		libft/printf/src/tools/initialization.c
		libft/printf/src/types/percent.c
		libft/printf/src/types/type_b.c
		libft/printf/src/types/type_c.c
		libft/printf/src/types/type_d.c
		libft/printf/src/types/type_f.c
		libft/printf/src/types/type_o.c
		libft/printf/src/types/type_p.c
		libft/printf/src/types/type_s.c
		libft/printf/src/types/type_u.c
		libft/printf/src/types/type_x.c
		libft/printf/src/types/unknown.c
		libft/printf/src/ft_printf.c
		libft/printf/src/ft_printf_extend.c
		libft/printf/src/parsing.c
		libft/string/includes/ft_strings.h
		libft/string/includes/string_builder.h
		libft/string/src/string_builder.c
		libft/string/src/string_builder_operats.c
		sources/vm/crw_utils.c sources/op/op_arg_handlers.c)